# my-echo-bot

./: .gitignore  README.md  export_settings_json.sh  main.py  pyproject.toml  requirements.txt
client/public/scripts/: chat_bot_scripts.js
client/src/components/: BasicForm.js
echobot/: bot.py  openapi_agent_utils.py  openapi_utils.py  utils.py
echobot/agents/: agent_utils.py  openapi_agent_utils.py
notebooks/agents-playground/: README.md  config.json.base  simple-agent.ipynb
notebooks/html-prompting/: html-prompting.ipynb  utils.py
notebooks/langchain-introduction/: README.md  config.json.base  working_with_langchain.ipynb
public/: index.html  index_speech.html  styles.css
public/scripts/: chat_bot_scripts.js
public/styles/: styles.css
